# google-python-style-guide-demo

./: .pre-commit-config.yaml  .sourcery.yaml  README.md  pyproject.toml
examples/individual_rules/: conditional_expression_rules.py  decorator_rules.py  default_iterator_and_operator_rules.py  docstring_and_comment_rules.py  exception_rules.py  function_length_rules.py  getter_and_setter_rules.py  global_variable_rules.py  import_rules.py  lambda_function_rules.py  naming_rules.py  type_annotations_rules.py
examples/real_world/: sourcery_analytics_cli_partials.py  sourcery_analytics_metrics_compounders.py
