[tool.poetry]
name = "google-python-style-guide-demo"
version = "0.1.0"
description = "Demo project using Sourcery to enforce the Google Python Style Guide"
authors = ["Ruan Comelli <ruan@sourcery.ai>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
sourcery-cli = ">=0.12.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
